Pushed Rock paper Scissors

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>JS start</title>
 </head>
 <body>
-    
+    <div id="score">Welcome To Rock, Paper, Scissors</div>
+    <div id="winner">Best of 5</div>
+    <button id="btn" onclick="main()">Rock,Paper, Scissors</button>
 </body>
 </html>
