--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,18 @@
     <script src="script.js"></script>
     <title>JS start</title>
 </head>
+
 <body>
     <div id="score">Welcome To Rock, Paper, Scissors</div>
+    <div id="pick"></div>
     <div id="winner">Best of 5</div>
-    <button id="btn" onclick="main()">Rock,Paper, Scissors</button>
+    <div class="container">
+        <button id="btn1" onclick="main(0)">Rock</button>
+        <button id="btn2" onclick="main(1)">Paper</button>
+        <button id="btn3" onclick="main(2)">Scissors</button>
+    </div>
+    <img id="EndingImage" src=''>
+
 </body>
+
 </html>
