--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id="btn3" onclick="main(2)">Scissors</button>
     </div>
     <img id="EndingImage" src=''>
+    <p class="ver">Version 0.2</p>
 
 </body>
 
