--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <button id="btn3" onclick="main(2)">Scissors</button>
     </div>
     <img id="EndingImage" src=''>
-    <p class="ver">Version 0.2</p>
+    <div class="footer">
+        <a href="Calc/index2.html">Move to Calc</a>
+        <p class="ver">Version 0.2</p>
+    </div>
 
 </body>
 
