added ver detail

--- a/Calc/index2.html
+++ b/Calc/index2.html
@@ -32,6 +32,7 @@
             <button onclick="UpdateDisplay('=')">=</button>
             <button onclick="Clear()">Clear</button>
         </div>
+        <div class="footer" style="font-size: 14px;align-self: flex-end;">ver 0.2</div>
     </div>
 
 </body>
