Added navigation bar

--- a/Calc/index2.html
+++ b/Calc/index2.html
@@ -10,8 +10,15 @@
 </head>
 
 <body onload="OnLoad()">
+    <div class="navBar">
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li id="active"><a href="index2.html">Calc</a></li>
+            <li><a href="../Grid/index.html">Grid</a></li>
+            <li><a href="../ADVHTML/index.html">Table</a></li>
+        </ul>
+    </div>
     <div class="bodycont">
-        <div class="header">Welcome to my Calculator</div>
         <div class="calc">
             <p id="Display2" style="background-color: lightgrey;">0</p>
             <p id="Display" style="background-color: lightgrey;">0</p>
@@ -35,8 +42,6 @@
             </div>
             <div class="footer" style="font-size: 14px;align-self: flex-end;">ver 0.2</div>
         </div>
-        <a href="../index.html" style="font-size: 20px;align-self: flex-start;position:absolute; bottom: 0;margin:15px 15px;">back to main</a>
-    </div>
 </body>
 
 </html>
