--- a/index.html
+++ b/index.html
@@ -10,20 +10,29 @@
 </head>
 
 <body>
-    <div id="score">Welcome To Rock, Paper, Scissors</div>
-    <div id="pick"></div>
-    <div id="winner">Best of 5</div>
-    <div class="container">
-        <button id="btn1" onclick="main(0)">Rock</button>
-        <button id="btn2" onclick="main(1)">Paper</button>
-        <button id="btn3" onclick="main(2)">Scissors</button>
+    <div class="navBar">
+        <ul>
+            <li id="active"><a href="index.html">Home</a></li>
+            <li><a href="Calc/index2.html">Calc</a></li>
+            <li><a href="Grid/index.html">Grid</a></li>
+            <li><a href="ADVHTML/index.html">Table</a></li>
+        </ul>
     </div>
-    <img id="EndingImage" src=''>
+    <div class="main">
+        <div id="score">Welcome To Rock, Paper, Scissors</div>
+        <div id="pick"></div>
+        <div id="winner">Best of 5</div>
+        <div class="container">
+            <button id="btn1" onclick="main(0)">Rock</button>
+            <button id="btn2" onclick="main(1)">Paper</button>
+            <button id="btn3" onclick="main(2)">Scissors</button>
+        </div>
+        <img id="EndingImage" src=''>
+    </div>
     <div class="footer">
-        <a href="Calc/index2.html">Move to Calc</a>
+
         <p class="ver">Version 0.2</p>
     </div>
-
 </body>
 
 </html>
