--- a/ADVHTML/index.html
+++ b/ADVHTML/index.html
@@ -20,8 +20,8 @@
             <li id="active"><a href="index.html">Table</a></li>
         </ul>
     </div>
-    <caption>Data about the planets of our solar system (Planetary facts taken from <a
-            href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
+    <p id="data">Data about the planets of our solar system (Planetary facts taken from <a
+            href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</p>
     <table>
         <colgroup>
             <col span="2">
