--- a/Calc/index2.html
+++ b/Calc/index2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <style>@import "../style.css";</style>
     <script src="script.js"></script>
     <title>Calculator</title>
 </head>
