--- a/Grid/index.html
+++ b/Grid/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <style>
+        @import "../style.css";
+    </style>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+</head>
+
+<body>
     <div class="navBar">
         <ul>
             <li><a href="../index.html">Home</a></li>
@@ -22,9 +28,6 @@
     <div class="container">
     </div>
     <a href="../index.html">back to main</a>
-</head>
-
-<body>
 
 </body>
 
