--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Yoav Gershman</title>
 </head>
 
-<body>
+<body id="main">
     <div class="navBar">
         <ul>
             <li id="active"><a href="index.html">Home</a></li>
