main footer changed

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         </div>
         <img id="EndingImage" src=''>
     </div>
-    <div class="footer">
-
+    <div class="footer" id="main">
         <p class="ver">Version 0.2</p>
     </div>
 </body>
