--- a/Calc/index2.html
+++ b/Calc/index2.html
@@ -17,6 +17,7 @@
             <li id="active"><a href="index2.html">Calc</a></li>
             <li><a href="../Grid/index.html">Grid</a></li>
             <li><a href="../ADVHTML/index.html">Table</a></li>
+            <li><a href="../TicTacToe/index.html">TicTacToe</a></li>
         </ul>
     </div>
     <div class="bodycont">
