--- a/ADVHTML/index.html
+++ b/ADVHTML/index.html
@@ -18,6 +18,7 @@
             <li><a href="../Calc/index2.html">Calc</a></li>
             <li><a href="../Grid/index.html">Grid</a></li>
             <li id="active"><a href="index.html">Table</a></li>
+            <li><a href="../TicTacToe/index.html">TicTacToe</a></li>
         </ul>
     </div>
     <p id="data">Data about the planets of our solar system (Planetary facts taken from <a
