--- a/Grid/index.html
+++ b/Grid/index.html
@@ -19,6 +19,7 @@
             <li><a href="../Calc/index2.html">Calc</a></li>
             <li id="active"><a href="index.html">Grid</a></li>
             <li><a href="../ADVHTML/index.html">Table</a></li>
+            <li><a href="../TicTacToe/index.html">TicTacToe</a></li>
         </ul>
     </div>
     <div class="header">
