--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="Calc/index2.html">Calc</a></li>
             <li><a href="Grid/index.html">Grid</a></li>
             <li><a href="ADVHTML/index.html">Table</a></li>
+            <li><a href="TicTacToe/index.html">TicTacToe</a></li>
         </ul>
     </div>
     <div class="main">
