--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Yoav Gershman</title>
 </head>
 
@@ -30,6 +30,7 @@
         </div>
         <img id="EndingImage" src=''>
     </div>
+    <button onclick="reset()" id="resetBtn">Reset</button>
     <div class="footer" id="main">
         <p class="ver">Version 0.2</p>
     </div>
