--- a/ADVHTML/index.html
+++ b/ADVHTML/index.html
@@ -8,6 +8,7 @@
         @import "../style.css";
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../xdd.png" />
     <title>Tables</title>
 </head>
 
