--- a/Calc/index2.html
+++ b/Calc/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <style>@import "../style.css";</style>
+    <link rel="icon" href="../xdd.png" />
     <script src="script.js"></script>
     <title>Calculator</title>
 </head>
