--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -9,6 +9,7 @@
         @import "../style.css";
     </style>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../xdd.png" />
     <title>TicTacToe</title>
 </head>
 
