--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
     <style>
-        @import "../style.css";
+      @import "../style.css";
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="../xdd.png" />
     <title>TicTacToe</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="navBar">
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../Calc/index2.html">Calc</a></li>
-            <li><a href="../Grid/index.html">Grid</a></li>
-            <li><a href="../ADVHTML/index.html">Table</a></li>
-            <li id="active"><a href="index.html">TicTacToe</a></li>
-        </ul>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Calc/index2.html">Calc</a></li>
+        <li><a href="../Grid/index.html">Grid</a></li>
+        <li><a href="../ADVHTML/index.html">Table</a></li>
+        <li id="active"><a href="index.html">TicTacToe</a></li>
+      </ul>
     </div>
     <div class="container">
-        <div class="Curr_turn">Current Turn: O</div>
-        <div class="board">
-            <div class="grid_item" id="1" onclick="insert(1)"></div>
-            <div class="grid_item" id="2" onclick="insert(2)"></div>
-            <div class="grid_item" id="3" onclick="insert(3)"></div>
-            <div class="grid_item" id="4" onclick="insert(4)"></div>
-            <div class="grid_item" id="5" onclick="insert(5)"></div>
-            <div class="grid_item" id="6" onclick="insert(6)"></div>
-            <div class="grid_item" id="7" onclick="insert(7)"></div>
-            <div class="grid_item" id="8" onclick="insert(8)"></div>
-            <div class="grid_item" id="9" onclick="insert(9)"></div>
-        </div>
-        <button id="reset" onclick="reset()">Reset</button>
+      <div class="Curr_turn">Current Turn: O</div>
+      <div class="board">
+        <div class="grid_item" id="1" onclick="insert(1)"></div>
+        <div class="grid_item" id="2" onclick="insert(2)"></div>
+        <div class="grid_item" id="3" onclick="insert(3)"></div>
+        <div class="grid_item" id="4" onclick="insert(4)"></div>
+        <div class="grid_item" id="5" onclick="insert(5)"></div>
+        <div class="grid_item" id="6" onclick="insert(6)"></div>
+        <div class="grid_item" id="7" onclick="insert(7)"></div>
+        <div class="grid_item" id="8" onclick="insert(8)"></div>
+        <div class="grid_item" id="9" onclick="insert(9)"></div>
+      </div>
+      <button id="reset" onclick="reset()">Reset</button>
     </div>
-</body>
-
+  </body>
 </html>
