--- a/webpack/src/template.html
+++ b/webpack/src/template.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
-<script defer src="main.js"></script></head>
+</head>
 <body>
     <h1>Hello World</h1>
+    <p>wallao</p>
 </body>
 </html>
