--- a/webpack/src/template.html
+++ b/webpack/src/template.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <p>wallao</p>
-</body>
+  </head>
+  <body>
+    <header>
+      <button><a href="../../index.html">to Site</a></button>
+      <nav>
+        <button id="home">Home</button>
+        <button id="menu">Menu</button>
+        <button id="about">About</button>
+      </nav>
+    </header>
+    <div id="content"></div>
+    <footer>
+      <p>Something cleaver about the site</p>
+      <img src="../assets/ok.png" id="okimg" alt="okimg" />
+    </footer>
+  </body>
 </html>
