--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="Grid/index.html">Grid</a></li>
             <li><a href="ADVHTML/index.html">Table</a></li>
             <li><a href="TicTacToe/index.html">TicTacToe</a></li>
-            <li><a href="webpack/dist/index.html"></li>
+            <li><a href="webpack/dist/index.html">Resturant</li>
         </ul>
     </div>
     <div class="main">
