--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -20,6 +20,8 @@
         <li><a href="../Grid/index.html">Grid</a></li>
         <li><a href="../ADVHTML/index.html">Table</a></li>
         <li id="active"><a href="index.html">TicTacToe</a></li>
+        <li><a href="../webpack/dist/index.html">Resturant</a></li>
+        <li><a href="../../TodoList/dist/index.html">Todo List</a></li>
       </ul>
     </div>
     <div class="container">
