--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="ADVHTML/index.html">Table</a></li>
             <li><a href="TicTacToe/index.html">TicTacToe</a></li>
             <li><a href="webpack/dist/index.html">Resturant</a></li>
+            <li><a href ="../TodoList/dist/index.html">Todo List</a></li>
         </ul>
     </div>
     <div class="main">
