--- a/ADVHTML/index.html
+++ b/ADVHTML/index.html
@@ -20,6 +20,8 @@
             <li><a href="../Grid/index.html">Grid</a></li>
             <li id="active"><a href="index.html">Table</a></li>
             <li><a href="../TicTacToe/index.html">TicTacToe</a></li>
+            <li><a href="../webpack/dist/index.html">Resturant</a></li>
+            <li><a href ="../../TodoList/dist/index.html">Todo List</a></li>
         </ul>
     </div>
     <p id="data">Data about the planets of our solar system (Planetary facts taken from <a
