--- a/Grid/index.html
+++ b/Grid/index.html
@@ -21,6 +21,8 @@
             <li id="active"><a href="index.html">Grid</a></li>
             <li><a href="../ADVHTML/index.html">Table</a></li>
             <li><a href="../TicTacToe/index.html">TicTacToe</a></li>
+            <li><a href="../webpack/dist/index.html">Resturant</a></li>
+            <li><a href ="../../TodoList/dist/index.html">Todo List</a></li>
         </ul>
     </div>
     <div class="header">
