removed image borders in rest

--- a/webpack/src/template.html
+++ b/webpack/src/template.html
@@ -17,7 +17,7 @@
     <div id="content"></div>
     <footer>
       <p>Something cleaver about the site</p>
-      <img src="../assets/ok.png" id="okimg" alt="okimg" />
+      <img src="../assets/ok.webp" id="okimg" alt="okimg" />
     </footer>
   </body>
 </html>
