--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="TicTacToe/index.html">TicTacToe</a></li>
             <li><a href="webpack/dist/index.html">Resturant</a></li>
             <li><a href ="TodoList/dist/index.html"> Todo List</a></li>
+            <li><a href ="PokeAPI\index.html">Pokemon</a></li>
         </ul>
     </div>
     <div class="main">
